# Group_12_

./: CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml
.github/workflows/: integrate.yml  release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: imgtoolpy.rst  modules.rst
group_12/: compress.py  group_12.py  sharpen.py  sharpen_demo.ipynb
imgtoolPy/: compress.py  sharpen.py  shrink.py
imgtoolpy/: compress.py  crop.py  sharpen.py  shrink.py  toy_img.py
tests/: test_compress.py  test_crop.py  test_imgtoolPy.py  test_sharpen.py  test_shrink.py
