[tool.poetry]
name = "imgtoolPy"
version = "0.1.0"
description = "A python package to process image"
authors = ["Rita Ni <niruidan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.3.5"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
