[tool.poetry]
name = "group_12"
version = "0.1.0"
description = "A python package to process image"
authors = ["Rita Ni <niruidan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sklearn = "^0.0"
numpy = "^1.18.1"
pandas = "^1.0.1"
scipy = "^1.4.1"
scikit-image = "^0.16.2"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
