[tool.poetry]
name = "imgtoolpy"
version = "0.1.1"
description = "A python package to process image"
authors = ["Rita Ni <niruidan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sklearn = "^0.0"
numpy = "^1.18.1"
pandas = "^1.0.1"
scipy = "^1.4.1"
scikit-image = "^0.16.2"
python-semantic-release = "^4.10.0"
sphinx = "^2.4.4"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
pytest = "^5.3.5"
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"
flake8 = "^3.7.9"

[tool.semantic_release]
version_variable = "imgtoolpy/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

